# Project-Computer-Graphics

./: .gitignore  CMakeLists.txt  README.md  glad.c
include/glad/: glad.h
models/2021-f1-mercedes-benz-w12/source/: 2021 F! Mercedes-Benz W12.glb
src/: main.cpp
